# PyProject

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
alembic/: env.py  script.py.mako
alembic/versions/: 2025-03-02_add_documents_table.py  2025-03-02_add_permissions_table.py  2025-03-02_add_projects_table.py  2025-03-02_add_users_table.py
src/: alembic.ini  config.py  deps.py  exceptions.py  main.py  middlewares.py
src/alembic/: env.py
src/alembic/versions/: 2025-03-02_add_documents_table.py  2025-03-02_add_permissions_table.py  2025-03-02_add_projects_table.py  2025-03-02_add_users_table.py
src/api/: config.py  deps.py  middlewares.py
src/api/auth/: auth.py
src/api/aws/: s3.py
src/api/database/: sync_engine.py
src/api/documents/: __init__.py  dto.py  models.py  repositories.py  services.py
src/api/permissions/: enums.py  models.py
src/api/projects/: dto.py  models.py  repositories.py  services.py
src/api/routers/v1/: __init__.py  documents_routers.py  projects_routers.py  users_routers.py
src/api/users/: dto.py  models.py  repositories.py  services.py  user_deps.py
src/api/v1/: __init__.py  documents_routers.py  projects_routers.py  routers.py  users_routers.py
src/auth/: auth.py
src/aws/: s3.py
src/dataBase/: sync_engine.py
src/data_base/: sync_engine.py
src/database/: base_model.py  sync_engine.py
src/documents/: doc_dto.py  dto.py  models.py  repositories.py  routers.py  services.py
src/lambda/: lambda_function.py
src/permissions/: enums.py  models.py
src/projects/: dto.py  models.py  repositories.py  routers.py  services.py
src/users/: dto.py  models.py  repositories.py  routers.py  services.py  user_deps.py
tests/: conftest.py  test_project.py  test_user.py
