[project]
name = "pyproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolina"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "apps-iam-service"
version = "0.1.0"
description = ""
authors = ["Nikica"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.18.0,<0.19.0"

[tool.poetry.group.lambda]
optional = true

[tool.poetry.group.lambda.dependencies]
requests = ">=2.32.3,<3.0.0"

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]