[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["Nikica"]

[tool.poetry.dependencies]
python = "^3.12"
python-multipart = "^0.0.20"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = ">=0.115.8,<0.116.0"
uvicorn = ">=0.18.0,<0.19.0"
pyjwt = "^2.10.1"
python-jose = {extras = ["cryptography"], version = "^3.4.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.group.lambda]
optional = true

[tool.poetry.group.lambda.dependencies]

[tool.poetry.group.dev]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^4.1.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.8.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = "^2.0.38"
alembic = "^1.14.1"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
boto3 = "^1.37.10"
pillow = "^11.1.0"

[tool.ruff]
line-length = 120
show-fixes = true
exclude = [
  ".git",
]

[tool.ruff.lint]
select = [
  "F",        # pyflakes
  "E",        # pycodestyle errors
  "W",        # pycodestyle warnings
  "I",        # isort
  "C4",       # flake8-comprehensions
  "B",        # flake8-bugbear
  "T20",      # flake8-print
  "ASYNC",    # asyncio
  "TID252",   # flake8-tidy-imports, prefer absolute imports over relative imports from parent modules
]
ignore = [
  "B904",
  "B008",
]
fixable = ["ALL"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
ignore_missing_imports = true
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
